# redfog

./: .gitignore  Cargo.toml  TODO.md  design.md  idea.md  proto.sh  t  test-portal-screencast.py
.github/workflows/: tests.yml
config/: sessions.toml.example
crates/gst-backend/: Cargo.toml
crates/gst-backend/src/: lib.rs
crates/kwin-capture/: Cargo.toml
crates/kwin-capture/src/: lib.rs  main.rs
crates/kwin-input/: Cargo.toml
crates/kwin-input/src/: main.rs
crates/kwin-viewer/: Cargo.toml
crates/kwin-viewer/src/: main.rs
crates/redfog-broker/: Cargo.toml
crates/redfog-broker-protocol/: Cargo.toml
crates/redfog-broker-protocol/src/: lib.rs
crates/redfog-broker/examples/: read_user_session_config_test.rs  spawn_payload_test.rs  test_client.rs
crates/redfog-broker/src/: auth.rs  main.rs  session.rs
crates/redfog-core/: Cargo.toml
crates/redfog-core/examples/: pause_resume_full_rebuild_probe.rs  pause_resume_probe.rs  relative_pointer_direct_test.rs  sdl2_relative_pointer_direct_test.rs  sustained_multi_resume_probe.rs
crates/redfog-core/src/: environment.rs  lib.rs
crates/redfog-core/tests/: pause_resume.rs
crates/redfog-login/: Cargo.toml
crates/redfog-login-protocol/: Cargo.toml
crates/redfog-login-protocol/src/: lib.rs  render.rs
crates/redfog-login/examples/: render_preview.rs
crates/redfog-login/src/: keymap.rs  main.rs  ui.rs
crates/redfog-moonlight/: Cargo.toml
crates/redfog-moonlight/examples/: fake_client_control.rs  fake_client_pair.rs  fake_client_stream.rs
crates/redfog-moonlight/src/: audio.rs  clients.rs  control.rs  crypto.rs  discovery.rs  lib.rs  login_report.rs  pairing.rs  rtsp.rs  session.rs  tls.rs  video.rs
crates/redfog-moonlight/tests/: connection_integration.rs  pairing_integration.rs
crates/redfog-pair/: Cargo.toml
crates/redfog-pair/src/: main.rs
crates/redfog-server/: Cargo.toml
crates/redfog-server/src/: main.rs
crates/redfog-session-init/: Cargo.toml
crates/redfog-session-init/src/: main.rs
crates/redfog-test-ux/: Cargo.toml
crates/redfog-test-ux/examples/: relative_pointer_check.rs  sdl2_relative_pointer_check.rs
crates/redfog-test-ux/src/: main.rs
crates/session-backend/: Cargo.toml
crates/session-backend/examples/: headless_login_smoke.rs
crates/session-backend/src/: lib.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs
patches/: moonlight-common-rust-rtsp-port-parsing.patch
scripts/: diff-session-env.sh  dump-session-env.sh  fetch-patched-deps.sh  gst-viewer-sway-test.conf  repro-post-resume-throttling.sh  run-gst-viewer.sh  run-tests.sh  sudo-live-session.sh  sudo-test-runner.sh  trace-app-resolution.sh
