[package]
name = "kwin-capture"
version = "0.1.0"
edition = "2021"

[lib]
name = "kwin_capture"
path = "src/lib.rs"

[[bin]]
name = "kwin-capture"
path = "src/main.rs"

[dependencies]
wayland-client = "0.31"
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
wayland-scanner = "0.31"
wayland-backend = "0.3"
bitflags = "2"
