[package]
name = "redfog-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
pam = "0.8"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redfog-broker-protocol = { path = "../redfog-broker-protocol" }
