[package]
name = "redfog-core"
version = "0.1.0"
edition = "2021"

[dependencies]
kwin-capture = { path = "../kwin-capture" }
wayland-client = "0.31"
wayland-scanner = "0.31"
wayland-backend = "0.3"
gstreamer = "0.21"
gstreamer-app = "0.21"
gstreamer-video = "0.21"

[dev-dependencies]
nix = { version = "0.26", features = ["signal"] }
