[package]
name = "redfog-moonlight"
version = "0.1.0"
edition = "2021"

[dependencies]
redfog-core = { path = "../redfog-core" }
gstreamer = "0.21"

tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
form_urlencoded = "1"

rtsp-types = "0.1"
sdp-types = "0.1"

tokio-enet = "0.1"

rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.14"
rustls-pki-types = "1.4"
rsa = "0.9"
pkcs8 = "0.11"
x509-parser = "0.18"
aes = "0.8"
cbc = "0.1"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

mdns-sd = "0.13"
gethostname = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"

[dev-dependencies]
ureq = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# GPL-3.0-or-later, dev-only: the real reference client implementation, used
# to validate our server against actual client-side crypto/parsing rather
# than our own (possibly-biased) reimplementation of both sides.
moonlight-common = { git = "https://github.com/MrCreativ3001/moonlight-common-rust", default-features = false, features = ["tokio-hyper", "rustcrypto"] }
pem = "3"
