[package]
name = "redfog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
redfog-core = { path = "../redfog-core" }
redfog-moonlight = { path = "../redfog-moonlight" }
redfog-login-protocol = { path = "../redfog-login-protocol" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gstreamer = "0.21"
gethostname = "0.5"
rand = "0.8"
rustls = "0.23"
